--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+##  Spring DATASOURCE
+spring.datasource.url=jdbc:mysql://blok21.com:3306/unispring
+spring.datasource.username=milka
+spring.datasource.password=tuctuc1euro
+##  Hibernate Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
