--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,12 @@
 			<artifactId>spring-session-core</artifactId>
 			<version>2.2.1.RELEASE</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
