--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-easy-dialog": "^0.3.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
-    "react-textarea-autosize": "^7.1.2"
+    "react-textarea-autosize": "^7.1.2",
+    "sass-loader": "^8.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "webpack --watch -d"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +37,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.1.2",
+    "webpack-cli": "^3.3.11",
+    "sass-loader": "^7.2.0",
+    "node-sass": "^4.0.0"
   }
 }
