chart update, components update

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-easy-dialog": "^0.3.3",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.4.0",
+    "react-tabs": "^3.1.0",
     "react-textarea-autosize": "^7.1.2",
     "sass-loader": "^8.0.2"
   },
