--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
@@ -17,6 +18,7 @@
     "react-bootstrap-easy-dialog": "^0.3.3",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
+    "react-google-charts": "^3.0.15",
     "react-modal": "^3.11.2",
     "react-scripts": "3.4.0",
     "react-tabs": "^3.1.0",
