--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+##  HTTPS
+server.port=443
 ##  Spring DATASOURCE
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/unispring
 spring.datasource.username=milka
@@ -6,3 +8,14 @@ spring.datasource.password=tuctuc1euro
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.data.rest.base-path=api
+
+##  SSL PROPERTIES
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/baeldung.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=tuctuc1euro
+# The alias mapped to the certificate
+server.ssl.key-alias=baeldung
