--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
+    "@material-ui/core": "^4.9.14",
+    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "^10.2.0",
     "axiom": "^0.1.6",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-bootstrap-easy-dialog": "^0.3.3",
     "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-google-charts": "^3.0.15",
     "react-modal": "^3.11.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "3.4.1",
     "react-tabs": "^3.1.0",
     "react-textarea-autosize": "^7.1.2",
     "sass-loader": "^8.0.2"
@@ -48,9 +48,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "webpack-cli": "^3.3.11",
     "sass-loader": "^8.0.2",
-    "node-sass": "^4.0.0"
+    "node-sass": "^4.14.1"
   }
 }
