--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ server.ssl.key-store=classpath:keystore/baeldung.p12
 server.ssl.key-store-password=tuctuc1euro
 # The alias mapped to the certificate
 server.ssl.key-alias=baeldung
+
+server.session.timeout=600
+server.servlet.session.timeout=600
