Security: Logging + program logged to unispring.log + loggin when user logs in or pays fees * log file added to .gitignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ server.ssl.key-alias=baeldung
 
 server.session.timeout=600
 server.servlet.session.timeout=600
+
+##  LOGGING
+logging.file.name=unispring.log
